--- a/visualization.ipynb
+++ b/visualization.ipynb
@@ -8,8 +8,6 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
-    "\n",
     "import math\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -17,15 +15,8 @@
     "from io import StringIO\n",
     "from matplotlib.patches import Rectangle\n",
     "\n",
-    "import imageio\n"
+    "import imageio"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -50,7 +41,6 @@
     "    ax.set_xlim(left=0, right=20)\n",
     "    ax.set_ylim(bottom=0, top=20)\n",
     "    plt.show()\n",
-    "\n",
     "\n",
     "\n",
     "def plot_scenario2_soln(title, soln):\n",
